--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ergon-easy-build",
   "version": "1.0.0",
   "description": "A quick module to get a frontend build system running",
-  "main": "index.php",
-  "author": "Ergon Tech",
-  "license": "Proprietary",
+  "email": "connor@ergon.tech",
+  "author": "Connor Abdelnoor (@lvampa)",
+  "license": "MIT",
   "repository": "https://github.com/ergontech/ErgonTech_SimpleFrontendBuild.git",
   "homepage": "",
   "dependencies": {
@@ -18,5 +18,6 @@
     "gulp-watch": "^4.3.5",
     "pump": "^1.0.2",
     "requirejs": "^2.3.3"
-  }
+  },
+  "bin": "./ergon-build-setup.js"
 }
